# Backpacking-Assistant-Agent

./: .dockerignore  .gitignore  .railwayignore  AGENTS.md  Dockerfile  INTEGRATION_COMPLETE.md  MIGRATION_STATUS.md  README.md  TEST_INTEGRATION.md  docker-compose.yml  package-lock.json  package.json  railway.toml  turbo.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  Dockerfile  Dockerfile.railway  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  ITINERARY_AGENT.txt  QUICKSTART.md  RAILWAY_SETUP.txt  README.md  VACCINE_AGENT_README.md  VISA_AGENT_README.md  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  supabase_schema_reference.md  test_agent.py  vaccine_agent.md
apps/api/app/schemas/: domain.py
apps/api/dependencies/: auth.py  config.py
apps/api/models/: agent_state.py
apps/api/routers/: accommodations.py  agents.py  itinerary.py  tasks.py
apps/api/schemas/: trip_schemas.py
apps/api/services/: job_service.py  trip_service.py
apps/api/services/agents/: __init__.py  super_agent.py
apps/api/services/agents/sub_agents/: __init__.py  accommodation_agent.py  itinerary_agent.py  name_description_agent.py  task_agent.py  vaccine_agent.py  visa_agent.py
apps/api/travel_concierge/: agent.py  prompt.py
apps/api/travel_concierge/shared_libraries/: types.py
apps/api/travel_concierge/sub_agents/planning/: agent.py  prompt.py  tasks_prompt.py
apps/api/travel_concierge/tools/: database.py
apps/web/: Dockerfile  ENV_SETUP.md  middleware.ts  next.config.mjs  (+3 more)
(+56 files in other folders)
